minor changes on layout

--- a/templates/index.html
+++ b/templates/index.html
@@ -59,12 +59,17 @@
         </nav>
         <div class="containers">
             <header class="item header">
-                <h1>SOLAR EXPECTS</h1>
+                <div class="htop">
+                    <img src="{% static 'img/a.jpg' %}" alt="">
+                </div>
+                <div class="htop">
+                    <img src="{% static 'img/main.jpg' %}" alt="">
+                </div>
             </header>
             <div class="item pic">
                 <img src="{% static 'img/10.jpg' %}" alt="">
-                <img src="{% static 'img/3.jpg' %}" alt="">
-                <img src="{% static 'img/9.jpg' %}" alt="">
+                <img src="{% static 'img/2.jpg' %}" alt="">
+                <img src="{% static 'img/1.jpg' %}" alt="">
             </div>
             <main class="item main-page">
                 <h1>WELCOME TO SUNENERGY</h1>
@@ -131,8 +136,8 @@
                 <div class="grid-item1"><i class="fa-solid fa-location-dot"></i>
                     <p>
                         Location: <br>
-                        Block 2 & 3, Elim House (Head Office) <br>
-                        Teshie Grada Estate.
+                        Volta Region <br>
+                        Tegbui Ashata.
                     </p>
                 </div>
                 <div class="grid-item2"><i class="fa-solid fa-envelope"></i>
