--- a/templates/message.html
+++ b/templates/message.html
@@ -6,26 +6,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <title>Message</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script type="module" src="https://unpkg.com/ionicons@5.4.0/dist/ionicons/ionicons.esm.js"></script>
 </head>
 
 <body>
-    <br><br><br>
-    <center class="message">
-        <h1>Messages</h1>
-        {% block content %}
-        <form action="" method="POST">
-            {% csrf_token %}
-            <input type="text" placeholder="Enter your name here" name="name" class="form-control"> <br>
-            <input type="phone" placeholder="Enter phone number" name="phone" class="form-control"> <br>
-            <input type="email" placeholder="Enter your email here!" name="email" class="form-control"><br>
-            <input type="Submit" class="btn btn-outline-secondary" value="SEND">
-        </form>
+    {% block content %}
+    <div class="frame msg">
+        {% include 'navbar.html' %}
+        <center class="box">
+            <h1>Messages</h1>
+            <form action="" method="POST">
+                {% csrf_token %}
+                <input type="text" placeholder="Enter your name here" name="name" class="form-control"> <br>
+                <input type="phone" placeholder="Enter phone number" name="phone" class="form-control"> <br>
+                <input type="email" placeholder="Enter your email here!" name="email" class="form-control"><br>
+                <input type="Submit" class="btn btn-outline-secondary" value="SEND">
+            </form>
+        </center>
         {% endblock %}
-    </center>
+        <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+            integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+            integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+            crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/496ed94260.js" crossorigin="anonymous"></script>
+    </div>
 </body>
 
 </html>
