--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,17 +1,15 @@
 {% load static %}
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-        <img src="{% static 'img/logo.jpg' %}" alt="Logo" width="100" height="60"
-            class="d-inline-block align-text-top">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-            aria-expanded="false" aria-label="Toggle navigation">
+        <img src="{% static 'img/logo.jpg' %}" alt="Logo" width="100" height="60" class="d-inline-block align-text-top">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#"><img class="home"
+                    <a class="nav-link active" aria-current="page" href="{% url 'home' %}"><img class="home"
                             src="{% static 'img/dynnamitt_home.png' %}" alt=""></a>
                 </li>
                 <li class="nav-item">
